# LuisaComputeSimulator

./: .clang-format  .gitignore  BUILD.md  CMakeLists.txt  README.md  build.sh  lcs_config_template.ini  pyproject.toml  setup.lua  xmake.lua
.github/workflows/: build_cmake.yml  build_wheels.yml  build_xmake.yml
Application/: app_integration.cpp  app_simulation.cpp  app_simulation_demo_config.cpp  app_simulation_demo_config.h  zzpch.h
Document/: Build.md  CppAPI.md  Energies.md  PythonAPI.md  Zhihu.md  contact_energy.ipynb  dfdx_codegen_utils.py  distance.ipynb  friction_energy.ipynb  stress.ipynb  stretch.ipynb
Document/Energies/: ABDOrtho.md  ARAPTet.md  Bending.md  ContactEnergy.md  FemBW98Cloth.md  HookeanSpring.md  JointConstraintEnergies.md  StableNeoHookean.md
PythonBindings/: CMakeLists.txt  example_usage.py  polyscope_gui.py  python_bindings.cpp  sim_utils.py
PythonBindings/cmake/: normalize_stub.cmake
PythonBindings/python/lcs_gui/: __init__.py
PythonBindings/python/lcs_py/: __init__.pyi
PythonBindings/robotics/: __init__.py  robot_builder.py  test_basic_joints.py  test_basic_pendulum.py  test_builder_smoke.py  test_cartpole.py  test_drop_contact.py  test_gravity_debug.py  test_robot_allegro.py  test_robot_anymal.py  test_robot_arm.py  test_robot_franka.py  test_robot_g1_stand.py  test_robot_h1_stand.py  test_robot_policy.py
PythonBindings/robotics/assets/anybotics_anymal_b/: anymal_b.xml
PythonBindings/robotics/assets/anybotics_anymal_c/: anymal_c.xml  anymal_c_mjx.xml
PythonBindings/robotics/assets/franka_emika_panda/urdf/: fr3.urdf  fr3_franka_hand.urdf
PythonBindings/robotics/assets/unitree_g1/: README.md
PythonBindings/robotics/assets/unitree_g1/mjcf/: g1_23dof.xml  g1_23dof_rev_1_0.xml  g1_29dof_lock_waist.xml  g1_29dof_lock_waist_rev_1_0.xml  g1_29dof_lock_waist_with_hand_rev_1_0.xml  g1_29dof_rev_1_0.xml  g1_29dof_rev_1_0_with_inspire_hand_FTP.urdf  g1_29dof_with_hand.xml  g1_29dof_with_hand_rev_1_0.xml  g1_dual_arm.xml
PythonBindings/robotics/assets/unitree_g1/rl_policies/: g1_23dof.yaml  g1_29dof.yaml  mjw_g1_23DOF.onnx  mjw_g1_23DOF.pt  mjw_g1_29DOF.onnx  mjw_g1_29DOF.pt  physx_g1_23DOF.onnx  physx_g1_23DOF.pt
PythonBindings/robotics/assets/unitree_g1/urdf/: dex3_1_l.urdf  dex3_1_r.urdf  g1_23dof.urdf  g1_23dof_rev_1_0.urdf  g1_29dof.urdf  g1_29dof_lock_waist.urdf  g1_29dof_lock_waist_rev_1_0.urdf  g1_29dof_lock_waist_with_hand_rev_1_0.urdf  g1_29dof_rev_1_0.urdf  g1_29dof_rev_1_0_with_inspire_hand_DFQ.urdf  g1_29dof_with_hand.urdf  g1_29dof_with_hand_rev_1_0.urdf  g1_comp.urdf  g1_dual_arm.urdf
PythonBindings/robotics/assets/unitree_g1/usd_structured/: README.md  g1_29dof_with_hand_rev_1_0.usda
PythonBindings/robotics/assets/unitree_g1/usd_structured/Payload/: Contents.usda  Geometry.usda  Materials.usda  MaterialsLibrary.usdc  Physics.usda
PythonBindings/robotics/assets/unitree_h1/: README.md
PythonBindings/robotics/assets/unitree_h1/urdf/: h1.urdf
PythonBindings/robotics/assets/unitree_h1/usd/: .collect.mapping.json  h1_minimal.usda
PythonBindings/robotics/assets/unitree_h1/usd_structured/: README.md  h1.usda
PythonBindings/robotics/assets/unitree_h1/usd_structured/Payload/: Contents.usda  Geometry.usda  Materials.usda  MaterialsLibrary.usdc  Physics.usda
PythonBindings/robotics/mesh/: robot_mesh.py
PythonBindings/robotics/parser/: __init__.py  collision_shapes.py  urdf_parser.py
PythonBindings/robotics/render/: robot_viewer.py
PythonBindings/robotics/solver/: articulation_view.py  robot_solver.py  world_meta.py
PythonBindings/robotics/tools/: compare_urdf_parser.py
PythonBindings/robotics/training/: action_mapper.py  observation_builder.py  robot_env.py
PythonBindings/robotics/utils/: joint_utils.py  mesh_approx.py  physics_utils.py  plotting.py  recorder.py  robot_sim_runner.py
PythonBindings/src/: python_bindings.cpp
PythonBindings/tests/: run_tests.py  test_cloth_animation.py  test_cloth_garment_animation.py  test_cloth_large_deform.py  test_cloth_rigid_coupling.py  test_cloth_soft_rigid_coupling.py  test_load_from_json.py  test_rigid_animation.py  test_rigid_folding.py  test_rigid_joint_animation.py  test_rigid_joint_animation2.py  test_soft_folding.py  test_tet_drop.py  test_tet_unit.py
PythonBindings/tests/utils/: animation_transform.py  arg_parser.py  body_animator.py  mesh_proc.py  polyscope_gui.py  smpl_animator.py  test_runner.py  test_script_path.py  vertex_animator.py
Resources/Scenes/: cloth_friction.json  cloth_moving_boundary.json  cloth_pinned.json  cloth_rigid_coupling_high_res.json  cloth_rotation_cylinder_7K.json  cloth_rotation_cylinder_88K.json  cloth_rotation_square.json  cloth_test_groud_ccd.json  cloth_unit_test_square2.json  cloth_unit_test_triangle1.json  default_scene.json  rigid_bucket.json  rigid_folding_cubes.json  rigid_frictional_test.json  rigid_multi_folding_cubes.json  rigid_multi_multi_folding_cubes.json  rigid_test_shell.json  rigid_test_solid.json  rigid_unit_test_cube.json
Solver/CollisionDetector/: aabb.h  accd.hpp  cipc_kernel.hpp  distance.hpp  friction_kernel.hpp  lbvh.cpp  lbvh.h  narrow_phase.cpp  narrow_phase.h
Solver/Core/: affine_position.h  bits_utils.h  constant_value.h  float_n.h  float_nxn.h  lc_to_eigen.h  matrix_triplet.h  scalar.h  sugar.h  svd_2x2.h  svd_3x3.h  xbasic_types.h
Solver/Energies/: abd_inertia_energy.cpp  abd_inertia_energy.h  abd_ortho_energy.cpp  abd_ortho_energy.h  bending_energy_kernel.cpp  bending_energy_kernel.h  energy.h  (+13 more)
UnitTest/: CMakeLists.txt  run_tests.sh  test_abd_energy.cpp  test_base_solver.h  test_ccd.cpp  test_energy_assembly.cpp  test_framework.h  test_gradient_hessian.cpp  test_host_functions.cpp  test_integration.cpp  test_jit.cpp  test_lbvh.cpp  test_lbvh_refit.cpp  test_lc_features.cpp  test_lcpp.cpp  test_narrow_phase.cpp  test_newton_solver_integration.cpp  test_pcg_solver.cpp  test_profiling.cpp  test_xtypes.cpp
ext/: CMakeLists.txt  xmake.lua
scripts/: download_robot_assets.py
todo/: COMMIT_LOG.md  CONTACT_TUNING.md  DONE.md  ROADMAP.md  SCENE_EXAMPLES.md  SIMULATION_PIPELINE.md  TODO.md
(+76 files in other folders)
