function(luisa_compute_solver_add_test name)
    add_executable(${name} ${ARGN})
    target_link_libraries(${name} PRIVATE luisa::compute luisa-compute-solver-lib)
    install(TARGETS ${name} RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR})
endfunction()



luisa_compute_solver_add_test(test_xtypes test_xtypes.cpp)
luisa_compute_solver_add_test(test_lc_features test_lc_features.cpp)
luisa_compute_solver_add_test(test_lbvh_refit test_lbvh_refit.cpp)
luisa_compute_solver_add_test(test_jit test_jit.cpp)
luisa_compute_solver_add_test(test_host_functions test_host_functions.cpp)
luisa_compute_solver_add_test(test_abd_energy test_abd_energy.cpp)
luisa_compute_solver_add_test(test_gradient_hessian test_gradient_hessian.cpp)

